--- a/src/stylus/landing.styl
+++ b/src/stylus/landing.styl
@@ -28,7 +28,7 @@
     padding 1rem 2rem
     background #fff
     border-radius 1rem
-    height 30rem
+    height 25rem
   &__textinput
     width 100%
     background #eee
@@ -38,6 +38,35 @@
     resize none
 
 .main-ui
+  &__title
+    font-size 1.6rem
+    font-weight bold
+    margin-top 1rem
+  &__savedinputs
+    background #fff
+    padding 1rem
+    margin-top 1rem
+    border-radius 1rem
+    &-wrapper
+      display flex
+      align-items center
+      justify-content space-between
+      button
+        cursor pointer
+        padding 1rem
+        font-size 1.6rem
+  &__savedinput
+    background #eee
+    padding 1rem
+    width 100%
+    font-size 1.6rem
+    cursor pointer
+    display flex
+    align-items center
+    justify-content space-between
+    margin .5rem 0
+    border-radius .5rem
+    
   &__saveinput
     padding 1.4rem
     margin-left 0.5rem
@@ -72,6 +101,7 @@
       display flex
     &__btn
       padding 1rem
+      cursor pointer
       font-size 1.6rem
       &:last-child
         border-top-right-radius 3rem
