--- a/src/stylus/navbar.styl
+++ b/src/stylus/navbar.styl
@@ -1,4 +1,13 @@
 .navbar
   padding 1rem
+  display flex
+  align-items center
+  justify-content space-between
   &__title
     font-size 6rem
+    color #2f3542
+  &__subtitle
+    text-decoration none
+    font-size 3rem
+    color #2f3542
+  
