--- a/src/stylus/navbar.styl
+++ b/src/stylus/navbar.styl
@@ -5,9 +5,11 @@
   justify-content space-between
   &__title
     font-size 6rem
-    color #2f3542
+    color #fff
+    text-shadow 0 0.5rem 1rem rgba(#000, 0.5)
   &__subtitle
     text-decoration none
     font-size 3rem
-    color #2f3542
+    color #fff
+    text-shadow 0 0.5rem 1rem rgba(#000, 0.5)
   
