--- a/src/stylus/help.styl
+++ b/src/stylus/help.styl
@@ -1,7 +1,7 @@
 .help
   width 100%
   height 100vh
-  background linear-gradient(to right bottom, #38ada9, #78e08f)
+  background linear-gradient(to right bottom,#5f27cd,#48dbfb)
   padding 0 10rem
 
   &__content
