--- a/src/stylus/landing.styl
+++ b/src/stylus/landing.styl
@@ -19,7 +19,7 @@
 
     font-size 1.6rem
     border-radius 0.5rem
-    background #1dd1a1
+    background #0984e3
     color #fff
     font-weight 700
   &__section
