Added scroll bar

--- a/src/stylus/input-output.styl
+++ b/src/stylus/input-output.styl
@@ -4,6 +4,7 @@
   background #fff
   display flex
   flex-direction column
+  overflow-y scroll
 
   &__textbox
     width 100%
@@ -35,6 +36,7 @@
   height 100%
   background #fff
   display flex
+  overflow-y scroll
   flex-direction column
 
   &__text
