--- a/src/stylus/main.styl
+++ b/src/stylus/main.styl
@@ -155,6 +155,13 @@ template
 [hidden]
   display none
 
+::-webkit-scrollbar
+  width .6rem
+  background #eee
+  &-thumb
+    background #b2bec3
+
+
 @import './navbar.styl'
 @import './landing.styl'
 @import './input-output.styl'
