--- a/src/stylus/landing.styl
+++ b/src/stylus/landing.styl
@@ -80,7 +80,7 @@
         border-radius .5rem
   &__savedinput
     background #eee
-    padding 1rem
+    padding .5rem 1rem
     width 100%
     font-size 1.6rem
     cursor pointer
@@ -89,6 +89,16 @@
     justify-content space-between
     margin .5rem 0
     border-radius .5rem
+    display flex
+    flex-direction column
+    justify-content center
+    align-items flex-start
+    p
+      &:first-child
+        font-weight bold
+        font-size 1.8rem
+        margin-bottom .5rem
+        
     
   &__saveinput
     padding 1.4rem
